...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/btnEditProfile"
                style="@style/ProfileButtonStyle"
                android:text="Edit profile"
                app:drawableStartCompat="@drawable/ic_edit" />

            <TextView
                android:id="@+id/btnChangePassword"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/homeContainer">



            <ImageView
                android:id="@+id/ivSettings"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="14dp"
                android:src="@drawable/ic_settings"
                app:tint="@color/teal_900" />

...
