<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <View
        android:id="@+id/blobTopLeft"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/circle_decoration"
        android:translationX="-50dp"
        android:translationY="-50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="24dp"
        android:background="@drawable/bg_avatar_circle"
        android:backgroundTint="#80FFFFFF"
        android:padding="8dp"
        android:src="@drawable/ic_arrow_back_24"
        app:tint="@color/Black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="24dp"
        android:text="Selamat Datang\nKembali!"
        android:textColor="@color/Black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:hint="Enter your email"
        app:boxStrokeColor="@color/teal_500"
        app:boxStrokeErrorColor="#FF0000"
        app:errorTextColor="#FF0000"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:hint="Enter your password"
        app:boxStrokeColor="@color/teal_500"
        app:boxStrokeErrorColor="#FF0000"
        app:errorTextColor="#FF0000"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="Lupa Password?"
        android:textColor="@color/teal_500"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnActionLogin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/teal_500"
        android:text="Login"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

    <TextView
        android:id="@+id/tvOrLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Or Login with"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnActionLogin" />

    <LinearLayout
        android:id="@+id/layoutSocials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOrLogin">

        <ImageView
            android:id="@+id/btnFacebook"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/facebook48"
            android:layout_marginEnd="20dp"
            android:contentDescription="Login with Facebook"/>

        <ImageView
            android:id="@+id/btnGoogle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/google48"
            android:layout_marginEnd="20dp"
            android:contentDescription="Login with Google"/>

        <ImageView
            android:id="@+id/btnApple"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/x50"
            android:contentDescription="Login with Apple"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tidak punya akun? "
            android:textColor="@color/Black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvRegisterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Daftar Sekarang"
            android:textColor="@color/teal_500"
            android:textStyle="bold"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/circle_decoration"
        android:translationX="40dp"
        android:translationY="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>