...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Feeder 1 Card -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardFeeder1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="6dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="2dp"
                        android:clickable="true"
...
                android:padding="10dp"
                app:tint="#004D40" />
        </LinearLayout>

        <!-- Home Icon -->
        <LinearLayout
            android:id="@+id/homeContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
...
