...
        android:layout_height="80dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- IoT Device / Machine Icon -->
        <FrameLayout
            android:id="@+id/btnMachine"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/homeContainer"
            app:layout_constraintTop_toTopOf="parent"
...
